--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://drxsogood.github.io/React-Portfolio",
+  "homepage": "https://drxsogood.github.io/React-P",
   "name": "personal-portfolio",
   "version": "0.1.0",
   "private": true,
